# Open-Assistant

./: 404.html  api.html  blog.html  index.html
.github/: dependabot.yml
api/: auth-check.html  callback-debug.html  callback-discord.html  callback-github.html  callback-google.html  check-user-auth.html  close-collective-task.html  create-api-client.html  create-assistant-message.html  create-chat.html  create-frontend-user.html  create-prompter-message.html  create-worker.html  delete-chat.html  delete-user-1.html  delete-user.html  delete-worker.html  get-available-auth-providers.html  get-backend-settings-full.html  get-backend-settings-public.html  get-chat.html  (+82 more)
model/: pyproject.toml
model/model_eval/: eval_datasets.py  eval_rm.py  rejection_sampling.py  sampling_score.py  utils.py
model/model_eval/manual/: create_synth_import.py  requirements.txt  sampling_report.py  subsample_dataset.py
model/model_training/: check_dataset_counts.py  metrics.py  to_triton.py  trainer_rl.py  trainer_rm.py  trainer_sft.py
model/model_training/custom_datasets/: __init__.py  formatting.py  instruction.py  pretrain_datasets.py  prompt_dialogue.py  qa_datasets.py  rank_datasets.py  summarization.py  toxic_conversation.py  utils.py
model/model_training/models/: __init__.py  gptj.py  patching.py  patching_llama.py  patching_neox.py  patching_utils.py
model/model_training/tools/: augment_oasst.py  check_oasst_export.py  model_chat.py  model_cli.py  sample_rm_data.py
model/model_training/utils/: losses.py  ppo_utils.py  utils.py
model/pretokenizer/: requirements.txt
(+371 files in other folders)
