[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "model_training"
description = "Open Assistant Model Training Module"
version = "1.0.0"
authors = [
    { name = "LAION-AI", email = "contact@laion.ai" }
]
dependencies = [
    "accelerate==0.22.0",
    "bitsandbytes==0.41.1",
    "datasets==2.14.4",
    "deepspeed==0.10.1",
    "evaluate==0.4.0",
    "fastlangid==1.0.11",
    "flash_attn==2.1.1",
    "gdown",
    "trlx @ git+https://github.com/CarperAI/trlx.git",
    "ninja==1.11.1",
    "nltk==3.8.1",
    "numpy==1.25.2",
    "peft==0.2.0",
    "py7zr",
    "PyYAML==6.0.1",
    "sentencepiece==0.1.99",
    "scikit-learn==1.3.0",
    "tokenizers==0.13.3",
    "torch==2.0.1",
    "langcodes==3.3.0",
    "tqdm==4.66.1",
    "pydantic==1.10.7",
    "transformers==4.31.0",
    "wandb==0.15.9",
]

[project.optional-dependencies]
tests = [
  'pytest',
]

[tool.setuptools]
packages = ["model_training"]

[tool.black]
line-length = 120
target-version = ['py310']
